CreateSwot: fix input width on mobile

--- a/src/components/CreateSwot/styles.scss
+++ b/src/components/CreateSwot/styles.scss
@@ -1,4 +1,4 @@
-$input-width: 450px;
+$input-width: 100%;
 
 .root {
   margin: 0 50px;
